updating file structure

--- a/resources/styles/project-stylesheet.css
+++ b/resources/styles/project-stylesheet.css
@@ -1,6 +1,6 @@
 /* The yellow/black background image */
 body {
-  background-image: url('background-image.png');
+  background-image: url('../img/background-image.png');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100% 100%;
