--- a/resources/styles/project-stylesheet.css
+++ b/resources/styles/project-stylesheet.css
@@ -289,7 +289,7 @@ padding-right: 20px;
 /*******************************************/
 /* gallery css starts here by armughan      **/
 /*******************************************/
-/* this is the css for the gallery box in whic images are put */
+/* this is the css for the gallery box in which images are put */
 .gallery-box{
   max-width: 800px;
   margin: 5% auto;
